MWPW-172504 Fix chatbot still overlapping (#337)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,6 +105,7 @@ main .section[class*='grid-width-'] .columns.contained {
 body.disable-scroll #hb_chatbot-root,
 body.disable-scroll #adbMsgClientWrapper #adbmsgContainer .adbmsgCta {
   z-index: 1;
+  position: relative;
 }
 
 @media screen and (min-width: 1200px) {
